Configuring URL Rewrites

--- a/en/about.html
+++ b/en/about.html
@@ -25,10 +25,10 @@
             </div>
         
             <ul class="navbar navbarMask">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><button id="lang" onclick="window.location.href='../fr/apropos.html';">Français</button></li>
+                <li><a href="../home">Home</a></li>
+                <li><a href="about">About</a></li>
+                <li><a href="projects">Projects</a></li>
+                <li><button id="lang" onclick="window.location.href='../fr/apropos';">Français</button></li>
             </ul>
         </header>
 
