--- a/fr/projets.html
+++ b/fr/projets.html
@@ -24,10 +24,10 @@
             </div>
 
             <ul class="navbar navbarMask">
-                <li><a href="accueil.html">Accueil</a></li>
-                <li><a href="apropos.html">A propos</a></li>
-                <li><a href="projets.html">Projets</a></li>
-                <li><button id="lang" onclick="window.location.href='../en/projects.html';">English</button></li>
+                <li><a href="accueil">Accueil</a></li>
+                <li><a href="apropos">A propos</a></li>
+                <li><a href="projets">Projets</a></li>
+                <li><button id="lang" onclick="window.location.href='../en/projects';">English</button></li>
             </ul>
         </header>
 
