--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 
         <header>
             <div class="headerMobile">
-                <img id="logo-noir" src="../img/logo-noir.png" alt="logo de Canestin">
-                <img id="menu" src="../img/menu.png" alt="Icon menu">
+                <img id="logo-noir" src="img/logo-noir.png" alt="logo de Canestin">
+                <img id="menu" src="img/menu.png" alt="Icon menu">
             </div>
 
             <ul class="navbar navbarMask">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="en/about.html">About</a></li>
-                <li><a href="en/projects.html">Projects</a></li>
-                <li><button id="lang" onclick="window.location.href='fr/accueil.html';">Francais</button></li>
+                <li><a href="home">Home</a></li>
+                <li><a href="en/about">About</a></li>
+                <li><a href="en/projects">Projects</a></li>
+                <li><button id="lang" onclick="window.location.href='fr/accueil';">Francais</button></li>
             </ul>
         </header>
     
