--- a/fr/accueil.html
+++ b/fr/accueil.html
@@ -7,12 +7,13 @@
     <meta name="author" content="Canestin Ndong">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4c7496d2f0.js" crossorigin="anonymous"></script>
-    <script src="../js/index.js" defer></script>
+    <script src="../js/App.js" defer></script>
     <title>Accueil</title>
 </head>
 <body>
