fix: removed .htaccess file and added html extension

--- a/en/about.html
+++ b/en/about.html
@@ -1,161 +1,198 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Portfolio de Canestin Ndong">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="Canestin Ndong">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
-    <link rel="stylesheet" href="../css/about.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <script src="../js/App.js" defer></script>
-    <title>About</title>
-</head>
-<body>
-    <section>
-        <header>
-            <div class="headerMobile">
-                <img id="logo" src="../img/logo-blanc.png" alt="logo de Canestin">
-                <img id="logo-noir" src="../img/logo-noir.png" alt="logo de Canestin">
-                <img id="menu" src="../img/menu.png" alt="Icon menu">
-            </div>
-        
-            <ul class="navbar navbarMask">
-                <li><a href="../home">Home</a></li>
-                <li><a href="about">About</a></li>
-                <li><a href="projects">Projects</a></li>
-                <li><button id="lang" onclick="window.location.href='../fr/apropos';">Français</button></li>
-            </ul>
-        </header>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="description" content="Portfolio de Canestin Ndong" />
+		<meta name="keywords" content="HTML, CSS, JavaScript" />
+		<meta name="author" content="Canestin Ndong" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
+		<link rel="stylesheet" href="../css/about.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Poppins:wght@300;400&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
+		/>
+		<script src="../js/App.js" defer></script>
+		<title>About</title>
+	</head>
+	<body>
+		<section>
+			<header>
+				<div class="headerMobile">
+					<img id="logo" src="../img/logo-blanc.png" alt="logo de Canestin" />
+					<img
+						id="logo-noir"
+						src="../img/logo-noir.png"
+						alt="logo de Canestin"
+					/>
+					<img id="menu" src="../img/menu.png" alt="Icon menu" />
+				</div>
 
-        <div class="container">
-            <h1> <span> ABOUT </span> ME </h1>
-            <p> I am a stubborn, efficient and enterprising person in my work</p>
-            <span class="text-blanc">Always looking for new skills</span>
-        </div>
-    </section>
+				<ul class="navbar navbarMask">
+					<li><a href="../index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li>
+						<button
+							id="lang"
+							onclick="window.location.href='../fr/apropos.html';"
+						>
+							Français
+						</button>
+					</li>
+				</ul>
+			</header>
 
-    <section id="section2">
-        <div class="intro">
-            <div class="bloc">
-                <div class="bloc-icon">
-                    <img src="../img/graduation-hat.png">
-                </div>
-                <div class="bloc-text">
-                    <p>ISEP, digital engineering school. <br> Graduated in 2024.
-                    </p>
-                </div>
-            </div>
+			<div class="container">
+				<h1><span> ABOUT </span> ME</h1>
+				<p>I am a stubborn, efficient and enterprising person in my work</p>
+				<span class="text-blanc">Always looking for new skills</span>
+			</div>
+		</section>
 
-            <div class="bloc">
-                <div class="bloc-icon">
-                    <img src="../img/developpement-web.png">
-                </div>
-                <div class="bloc-text">
-                    <p> A lover of web and software development. </p>
-                </div>
-            </div>
+		<section id="section2">
+			<div class="intro">
+				<div class="bloc">
+					<div class="bloc-icon">
+						<img src="../img/graduation-hat.png" />
+					</div>
+					<div class="bloc-text">
+						<p>
+							ISEP, digital engineering school. <br />
+							Graduated in 2024.
+						</p>
+					</div>
+				</div>
 
-            <div class="bloc">
-                <div class="bloc-icon">
-                    <img src="../img/console.png">
-                </div>
-                <div class="bloc-text">
-                    <p> Call of Duty mobile and chess Amateur. </p>
-                </div>
-            </div>
+				<div class="bloc">
+					<div class="bloc-icon">
+						<img src="../img/developpement-web.png" />
+					</div>
+					<div class="bloc-text">
+						<p>A lover of web and software development.</p>
+					</div>
+				</div>
 
-            <div class="bloc">
-                <div class="bloc-icon">
-                    <img src="../img/essai.png">
-                </div>
-                <div class="bloc-text">
-                    <p> No knowledge is absolute ! Always learning.  </p>
-                </div>
-            </div>
-        </div>
+				<div class="bloc">
+					<div class="bloc-icon">
+						<img src="../img/console.png" />
+					</div>
+					<div class="bloc-text">
+						<p>Call of Duty mobile and chess Amateur.</p>
+					</div>
+				</div>
 
-        <div class="line"></div>
+				<div class="bloc">
+					<div class="bloc-icon">
+						<img src="../img/essai.png" />
+					</div>
+					<div class="bloc-text">
+						<p>No knowledge is absolute ! Always learning.</p>
+					</div>
+				</div>
+			</div>
 
-        <h1 class="title-formation"> FORMATION </h1> 
-        <div class="formation">
-            <div class="formation-bloc">
-                <div class="title-bloc-formation">
-                    <a title="Cliquez pour en savoir plus sur l'établissement" href="https://www.isep.fr/" target="_blank"> <img src="../img/isep.jpg" alt="isep"> </a>      
-                    <h3> Institut Supérieur d'Electronique de Paris</h3>
-                    <h4> 2021 - 2024</h4>
-                    <div class="specialites">
-                        <div>Information Systems Architecture</div>
-                        <div>Data Intelligence</div>
-                        <div>Web & Software Development</div>
-                        <div>Ergonomics and digital interfaces</div>
-                        <div>Embedded Systems Design</div>
-                        <div>Digital Security and Networks</div>
-                        <div>Connected Objects and Systems</div>
-                        <div>Digital and Health</div>
-                        <div>Innovation and Business Creation</div>
-                    </div>
-                </div>
-            </div>
-        </div>
+			<div class="line"></div>
 
-        <div class="transition">
+			<h1 class="title-formation">FORMATION</h1>
+			<div class="formation">
+				<div class="formation-bloc">
+					<div class="title-bloc-formation">
+						<a
+							title="Cliquez pour en savoir plus sur l'établissement"
+							href="https://www.isep.fr/"
+							target="_blank"
+						>
+							<img src="../img/isep.jpg" alt="isep" />
+						</a>
+						<h3>Institut Supérieur d'Electronique de Paris</h3>
+						<h4>2021 - 2024</h4>
+						<div class="specialites">
+							<div>Information Systems Architecture</div>
+							<div>Data Intelligence</div>
+							<div>Web & Software Development</div>
+							<div>Ergonomics and digital interfaces</div>
+							<div>Embedded Systems Design</div>
+							<div>Digital Security and Networks</div>
+							<div>Connected Objects and Systems</div>
+							<div>Digital and Health</div>
+							<div>Innovation and Business Creation</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
-            <p> I also attach an interest
-                particular to the discovery of new places and times
-                between friends. 
-            </p>
+			<div class="transition">
+				<p>
+					I also attach an interest particular to the discovery of new places
+					and times between friends.
+				</p>
+			</div>
 
-        </div>  
+			<div class="infos">
+				<div class="button">
+					<img id="arriere" src="../img/arriere.png" alt="Bouton arriere" />
+					<img id="avant" src="../img/suivant.png" alt="Bouton Avant" />
+				</div>
 
-        <div class="infos"> 
+				<div class="photos">
+					<div class="essai">
+						<img src="../img/can3.jpg" alt="Canestin à Marrakech" />
+						<div class="img-text">
+							<h4>
+								During a weekend <br />
+								in Marrakech
+							</h4>
+						</div>
+					</div>
 
-            <div class="button">
-                <img id="arriere" src="../img/arriere.png" alt="Bouton arriere">
-                <img id="avant" src="../img/suivant.png" alt="Bouton Avant">
-            </div>
+					<div class="essai">
+						<img src="../img/can4.jpg" alt="Canestin au Parc Asterix" />
+						<div class="img-text">
+							<h4>
+								Left to live the strong emotions <br />
+								at Parc Asterix
+							</h4>
+						</div>
+					</div>
 
-            <div class="photos">
+					<div class="essai">
+						<img src="../img/can5.jpg" alt="Canestin au Parc des Princes" />
+						<div class="img-text">
+							<h4>
+								Visiting <br />
+								at the Parc des Princes
+							</h4>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
-                <div class="essai">
-                    <img src="../img/can3.jpg" alt="Canestin à Marrakech"> 
-                    <div class="img-text">
-                        <h4>During a weekend <br> in Marrakech</h4>
-                    </div>
-                </div>
-
-                <div class="essai">
-                    <img src="../img/can4.jpg" alt="Canestin au Parc Asterix"> 
-                    <div class="img-text">
-                        <h4>Left to live the strong emotions <br> at Parc Asterix</h4>
-                    </div>
-                </div>
-
-                <div class="essai">
-                    <img src="../img/can5.jpg" alt="Canestin au Parc des Princes">
-                    <div class="img-text">
-                        <h4>Visiting <br> at the Parc des Princes</h4>
-                    </div>
-                </div>
-            </div>
-    
-        </div>
-    </section>
-
-    <footer>
-        <h3>CONTACT</h3>
-        <div class="contact">
-            <a href="https://www.linkedin.com/in/canestin-ndong/" target="_blank"> <img src="../img/linkedin.png"> </a>
-            <a href="https://github.com/Canestin" target="_blank"> <img src="../img/github.png"> </a>  
-            <a href="mailto:canestinng@gmail.com" target="_blank"> <img src="../img/gmail.png"> </i></a>
-            <a href="https://twitter.com/CanestinN/" target="_blank"> <img src="../img/twitter.png"> </i></a>
-        </div>
-        <h4>Made with ❤️ by <span>Canestin</span> </h4>
-    </footer>
-</body>
+		<footer>
+			<h3>CONTACT</h3>
+			<div class="contact">
+				<a href="https://www.linkedin.com/in/canestin-ndong/" target="_blank">
+					<img src="../img/linkedin.png" />
+				</a>
+				<a href="https://github.com/Canestin" target="_blank">
+					<img src="../img/github.png" />
+				</a>
+				<a href="https://instagram.com/canestin_off/" target="_blank">
+					<img src="../img/insta.png"
+				/></a>
+				<a href="https://twitter.com/CanestinN/" target="_blank">
+					<img src="../img/twitter.png" />
+				</a>
+			</div>
+			<h4>Made with ❤️ by <span>Canestin</span></h4>
+		</footer>
+	</body>
 </html>
