--- a/fr/accueil.html
+++ b/fr/accueil.html
@@ -1,58 +1,80 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Site web personnel">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="Canestin Ndong">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/4c7496d2f0.js" crossorigin="anonymous"></script>
-    <script src="../js/App.js" defer></script>
-    <title>Accueil</title>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="description" content="Site web personnel" />
+		<meta name="keywords" content="HTML, CSS, JavaScript" />
+		<meta name="author" content="Canestin Ndong" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
+		<link rel="stylesheet" href="../css/index.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Poppins:wght@300;400&display=swap"
+			rel="stylesheet"
+		/>
+		<script
+			src="https://kit.fontawesome.com/4c7496d2f0.js"
+			crossorigin="anonymous"
+		></script>
+		<script src="../js/App.js" defer></script>
+		<title>Accueil</title>
+	</head>
+	<body>
+		<section class="container-home">
+			<header>
+				<div class="headerMobile">
+					<img
+						id="logo-noir"
+						src="../img/logo-noir.png"
+						alt="logo de Canestin"
+					/>
+					<img id="menu" src="../img/menu.png" alt="Icon menu" />
+				</div>
 
-    <section class="container-home">
+				<ul class="navbar navbarMask">
+					<li><a href="accueil.html">Accueil</a></li>
+					<li><a href="apropos.html">A propos</a></li>
+					<li><a href="projets.html">Projets</a></li>
+					<li>
+						<button id="lang" onclick="window.location.href='../index.html';">
+							English
+						</button>
+					</li>
+				</ul>
+			</header>
 
-        <header>
-            <div class="headerMobile">
-                <img id="logo-noir" src="../img/logo-noir.png" alt="logo de Canestin">
-                <img id="menu" src="../img/menu.png" alt="Icon menu">
-            </div>
+			<div id="home">
+				<div class="home-img">
+					<img src="../img/canestin.jpg" />
+				</div>
 
-            <ul class="navbar navbarMask">
-                <li><a href="accueil">Accueil</a></li>
-                <li><a href="apropos">A propos</a></li>
-                <li><a href="projets">Projets</a></li>
-                <li><button id="lang" onclick="window.location.href='../home';">English</button></li>
-            </ul>
-        </header>
-    
-        <div id="home">
-
-            <div class="home-img">
-                <img src="../img/canestin.jpg">
-            </div>
-
-            <div class="home-text">
-                <h2>Hey ! Moi c'est</h2>
-                <h1> <span>CANESTIN </span>NDONG</h1>
-                <h3> Etudiant ingénieur, <span>développeur Web</span></h5>
-                <div class="social">
-                    <a href="https://www.linkedin.com/in/canestin-ndong/" target="_blank"> <img src="../img/linkedin.png"> </a>
-                    <a href="https://github.com/Canestin" target="_blank"> <img src="../img/github.png"> </a>  
-                    <a href="mailto:canestinng@gmail.com" target="_blank"> <img src="../img/gmail.png"> </i></a>
-                    <a href="https://twitter.com/CanestinN/" target="_blank"> <img src="../img/twitter.png"> </i></a>
-                </div>
-                <span href="#">Follow Me</span> 
-            </div>
-        </div>
-    </section>    
-</body>
+				<div class="home-text">
+					<h2>Hey ! Moi c'est</h2>
+					<h1><span>CANESTIN </span>NDONG</h1>
+					<h3>Etudiant ingénieur, <span>développeur Web</span></h3>
+					<div class="social">
+						<a
+							href="https://www.linkedin.com/in/canestin-ndong/"
+							target="_blank"
+						>
+							<img src="../img/linkedin.png" />
+						</a>
+						<a href="https://github.com/Canestin" target="_blank">
+							<img src="../img/github.png" />
+						</a>
+						<a href="https://instagram.com/canestin_off/" target="_blank">
+							<img src="../img/insta.png" />
+						</a>
+						<a href="https://twitter.com/CanestinN/" target="_blank">
+							<img src="../img/twitter.png" />
+						</a>
+					</div>
+					<span href="#">Follow Me</span>
+				</div>
+			</div>
+		</section>
+	</body>
 </html>
