fix: link between pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 			<div id="home">
 				<div class="home-img">
-					<img src="img/canestin.jpg" />
+					<img src="img/canestin.png" />
 				</div>
 
 				<div class="home-text">
