feat: add vercel analytics

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Poppins:wght@300;400&display=swap"
 			rel="stylesheet"
 		/>
+		<script defer src="/_vercel/insights/script.js"></script>
 		<script
 			src="https://kit.fontawesome.com/4c7496d2f0.js"
 			crossorigin="anonymous"
